package lab_3;

import javafx.scene.layout.Pane;

/**
 * Це інтерфейс, який визначає основний інтерфейс для об'єктів, які можна декорувати.
 *
 * <p>
 *	Даний інтерфейс містить метод для малювання фігур та для торимання їх опису.
 * </p>
 */
public interface Shape {
	/**
	 * Малює фігуру на вказаній панелі.
	 *
	 * @param pane Панель, на якій буде намальовано фігуру.
	 * @param x Координата X для позиціонування об'єкта.
	 * @param y Координата Y для позиціонування об'єкта.
	 */
	void draw(Pane pane, double x, double y);
	
	
	/**
	 * Повертає опис фігури.
	 *
	 * @return Строковий опис фігури.
	 */
	String getDescription();
}
